<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.main.ShapeGeneratorActivity" >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/spinnerShape"
            android:layout_width="200dp"
            android:layout_height="24dp"
            android:layout_marginStart="184dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="32dp"
            android:text="@string/select_shape"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="64dp"
            android:text="@string/length"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <EditText
            android:id="@+id/editLength"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/length_hint"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/length"
            app:layout_constraintTop_toBottomOf="@+id/spinnerShape" />

        <TextView
            android:id="@+id/width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="64dp"
            android:text="@string/width"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/length" />


        <EditText
            android:id="@+id/editWidth"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:hint="@string/width_hint"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/width"
            app:layout_constraintTop_toBottomOf="@+id/editLength" />

        <TextView
            android:id="@+id/radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="64dp"
            android:text="@string/radius"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/width" />

        <EditText
            android:id="@+id/editRadius"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/radius_hint"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/radius"
            app:layout_constraintTop_toBottomOf="@+id/editWidth" />

        <Button
            android:id="@+id/buttonGenerateShape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/generate_shape"
            android:textStyle="bold"
            android:padding="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/textViewColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editRadius" />


        <TextView
            android:id="@+id/dummyView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="8dp"
            android:text="@string/select_color"
            android:background="@android:color/darker_gray"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonGenerateShape" />


        <Spinner
            android:id="@+id/spinnerColor"
            android:layout_width="200dp"
            android:layout_height="24dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dummyView" />

        <TextView
            android:id="@+id/textViewColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="32dp"
            android:textStyle="bold"
            android:text="@string/select_color"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dummyView" />

        <ImageView
            android:id="@+id/imageShape"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewColor" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>